--- a/Education.html
+++ b/Education.html
@@ -23,7 +23,7 @@
   </nav>
 </header>
 <div class="animate">
-<h2><i>"The roots of education are bitter, but the fruit is sweet."</i> – Aristotle</h2>
+<h2><i>"The roots of education are bitter, but the fruit is sweet and sour."</i> – Aristotle</h2>
 </div>
 
 <section class="education" id="education">
