--- a/Education.html
+++ b/Education.html
@@ -35,7 +35,7 @@
         <img draggable="false" src="img visual/sk.jpg" alt="">
         </div>
         <div class="content">
-        <h3>ELEMENTARY SCHOOL</h3>
+        <h3>ELEMENTARY SCHOOLS</h3>
         <p>SK SERI CHEMPAKA</p>
         <ul>
           <li>UPSR: 5A 1B</li>
